fix(material/divider): non-text color contrast issues (#28995)
* fix(material/divider): non-text color contrast issues

Fixes color contrast issues with non-text elements. Changed from outline-variant to outline colors to pass 3:1 ratio between light/dark mode backgrounds.

Fixes b/291964002

* fix(material/divider): fixed demo list border color

fixed border list demo color to match divider color

fixes b/291964002

--- a/src/dev-app/list/list-demo.scss
+++ b/src/dev-app/list/list-demo.scss
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
 
   .mat-mdc-list-base {
-    border: 1px solid rgba(0, 0, 0, 0.12);
+    border: 1px solid var(--mat-divider-color);
     width: 350px;
     margin: 20px 20px 0 0;
   }
