--- a/src/material/core/tokens/m3/mat/_expansion.scss
+++ b/src/material/core/tokens/m3/mat/_expansion.scss
@@ -20,7 +20,7 @@ $prefix: (mat, expansion);
       header-indicator-display: token-utils.hardcode(inline-block, $exclude-hardcoded),
       container-background-color: map.get($systems, md-sys-color, surface),
       container-text-color: map.get($systems, md-sys-color, on-surface),
-      actions-divider-color: map.get($systems, md-sys-color, outline-variant),
+      actions-divider-color: map.get($systems, md-sys-color, outline),
       header-hover-state-layer-color: sass-utils.safe-color-change(
         map.get($systems, md-sys-color, on-surface),
         $alpha: map.get($systems, md-sys-state, hover-state-layer-opacity)
